[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lottery-draw-integrity"
version = "0.1.0"
description = "Statistical analysis of lottery number frequencies and anomaly detection"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "memory-profiler>=0.61.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.ruff]
# Linter settings
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # Line too long (handled by black)
    "B008", # Do not perform function call in argument defaults (common in data pipelines)
]
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    "data",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"] # Allow assert in tests

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | data
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]