[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmxive-dark-matter-halo-shapes"
version = "0.1.0"
description = "Quantifying the effects of dark matter halo shapes on galaxy formation"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "h5py>=3.8.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
    "pytest>=7.3.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
target-version = "py311"
